--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-		<title>Home &#8211; Profile</title>
+		<title>Produk BISA COD</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//s.w.org">
 <link rel="alternate" type="application/rss+xml" title="Home &raquo; Feed" href="./feed/index.html">
@@ -274,7 +274,7 @@ img.emoji {
 				<div class="elementor-element elementor-element-c2f43ab elementor-align-center elementor-hidden-desktop elementor-hidden-tablet elementor-widget elementor-widget-button" data-id="c2f43ab" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://go.bayarditempat.co/go/ac305e33-2277-493f-b698-f26787f38a1b" class="elementor-button-link elementor-button elementor-size-md elementor-animation-bob" role="button">
+			<a href="https://link.kamiantar.store/go/5536bee5-62b4-4459-84ca-9cec6d10d25e" class="elementor-button-link elementor-button elementor-size-md elementor-animation-bob" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-arrow-right"></i>			</span>
